--- a/JavaScript Front-End/06.DOM Manipulation and Events/DOM Manipulation and Events Exercise/08. Sudomu/template.html
+++ b/JavaScript Front-End/06.DOM Manipulation and Events/DOM Manipulation and Events Exercise/08. Sudomu/template.html
@@ -27,35 +27,35 @@
 					<tbody>
 						<tr>
 							<td>
-								<input min="1" max="3" type="number" />
+								<input min="1" max="3" value=1 type="number" />
 							</td>
 							<td>
-								<input min="1" max="3" type="number" />
+								<input min="1" max="3" value=2  type="number" />
 							</td>
 							<td>
-								<input min="1" max="3" type="number" />
-							</td>
-						</tr>
-						<tr>
-							<td>
-								<input min="1" max="3" type="number" />
-							</td>
-							<td>
-								<input min="1" max="3" type="number" />
-							</td>
-							<td>
-								<input min="1" max="3" type="number" />
+								<input min="1" max="3" value=3  type="number" />
 							</td>
 						</tr>
 						<tr>
 							<td>
-								<input min="1" max="3" type="number" />
+								<input min="1" max="3"value=4  type="number" />
 							</td>
 							<td>
-								<input min="1" max="3" type="number" />
+								<input min="1" max="3" value=5 type="number" />
 							</td>
 							<td>
-								<input min="1" max="3" type="number" />
+								<input min="1" max="3" value=6 type="number" />
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<input min="1" max="3" value=7 type="number" />
+							</td>
+							<td>
+								<input min="1" max="3" value=8 type="number" />
+							</td>
+							<td>
+								<input min="1" max="3" value=9 type="number" />
 							</td>
 						</tr>
 
